add param to specify number of extra vars to predict

--- a/ultralytics/cfg/models/v8/yolov8-seg-regression.yaml
+++ b/ultralytics/cfg/models/v8/yolov8-seg-regression.yaml
@@ -39,4 +39,4 @@ head:
   - [[-1, 9], 1, Concat, [1]]  # cat head P5
   - [-1, 3, C2f, [1024]]  # 21 (P5/32-large)
 
-  - [[15, 18, 21], 1, WeightSegment, [nc, 32, 256]]  # WeightSegment(P3, P4, P5)
+  - [[15, 18, 21], 1, SegmentRegressor, [nc, 32, 256]]  # SegmentRegressor(P3, P4, P5)
